[package]
name = "wasapi_low_latency"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rtrb = "0.3.2"
windows-strings = "0.5.1"
windows-implement = "0.60.2"
windows-core = "0.62.2"
windows = { version = "0.62.2", features = [
    "Win32_System_Com",
    "Media_Devices",
    "Win32_Media_Audio",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",

    "Foundation_Collections",
    "System_Inventory",
] }
extension-trait = "1.0.2"
auto_enums = "0.8.7"
thiserror = "2.0.17"
future_handles = {version = "0.2.0", features = ["sync"]}
tokio = { version = "1.48.0", features = ["full"] }
